<resources>
    <string name="app_name">Jot Down</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="action_create_note">Create note</string>
    <string name="action_choose_list_view">Choose view of list</string>
    <string name="action_share">Share</string>
    <string name="menu_list_view_text">List</string>
    <string name="menu_cardlist_view_text">CardList</string>
    <string name="note_title_hint">Title</string>
    <string name="note_description_hit">Description</string>
    <string name="action_create_notify">Create notify</string>
    <string name="action_search">Search</string>
    <string name="action_add_image">Add image</string>
    <string name="action_add_alarm">Add alarm</string>
    <string name="hint_search">Search text</string>
    <string name="action_add_photo">Add photo</string>
    <string name="action_add_record">Add record</string>
    <string name="action_add_file">Add file</string>
    <string name="alarm_canceled_message">Alarm canceled</string>
    <string name="get_need_permissions">Для корректной работы приложения предоставьте необходимые разрешения</string>
    <string name="request_write_external_storage">Нет разрешения на запись, фото не сохранено</string>
    <string name="request_read_external_storage">Нет разрешения на чтение, файл не прикреплен</string>
    <string name="request_record_audio">Нет разрешений на работу с аудио. Аудозаметка не сохранена</string>
    <string name="select_picture">Select Picture</string>
    <string name="records_title">Records</string>
    <string name="files_title">Files</string>
    <string name="button_detail">Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="clear">clear</string>
    <string name="delete_toolbar">delete</string>
</resources>
