<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollViewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@color/colorBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageNote"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:id="@+id/buttonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/cameraButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/action_add_photo"
                        android:onClick="addPhoto"
                        android:src="@android:drawable/ic_menu_camera"
                        android:layout_weight = "1"
                        android:background="@drawable/customborder_buttons"
                        android:layout_margin="5dp"/>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/action_add_image"
                        android:onClick="addImage"
                        android:src="@android:drawable/ic_menu_gallery"
                        android:layout_weight = "1"
                        android:background="@drawable/customborder_buttons"
                        android:layout_margin="5dp"/>

                    <ImageButton
                        android:id="@+id/audioRecordingButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/action_add_record"
                        android:onClick="addRecord"
                        android:longClickable="false"
                        android:src="@android:drawable/ic_btn_speak_now"
                        android:background="@drawable/customborder_buttons"
                        android:layout_margin="5dp"/>

                    <ImageButton
                        android:id="@+id/fileButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/action_add_file"
                        android:onClick="addFile"
                        android:src="@android:drawable/ic_menu_save"
                        android:layout_weight = "1"
                        android:background="@drawable/customborder_buttons"
                        android:layout_margin="5dp"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_title_hint" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_description_hit" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textViewAlarmPrompt"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/customborder_buttons"
                    android:layout_margin="5dp"
                    android:padding="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:background="@drawable/custom_tab"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@android:color/holo_orange_light"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <com.kozyrev.jotdown_room.CustomViews.WrapContentHeightViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.kozyrev.jotdown_room.CustomViews.WrapContentHeightViewPager>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

<!--    <android.support.design.widget.NavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        app:menu="@menu/menu_nav"/>-->

</android.support.v4.widget.DrawerLayout>